// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyRoomsScreen calls getEmptyRooms 1`] = `
Array [
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "#fefefe",
        "flex": 0,
      }
    }
  />,
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "#fefefe",
            "flex": 1,
            "flexDirection": "column",
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          Array [
            Object {
              "paddingBottom": 60,
              "paddingLeft": 20,
              "paddingRight": 20,
              "paddingTop": 20,
            },
            undefined,
          ]
        }
        keyboardDismissMode="on-drag"
        refreshControl={null}
        style={
          Array [
            Object {
              "backgroundColor": "#fefefe",
              "flex": 1,
              "paddingLeft": 0,
              "paddingRight": 0,
            },
            undefined,
          ]
        }
      >
        <View>
          <View
            style={
              Object {
                "paddingBottom": 20,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#4D5061",
                    "fontFamily": "apercu",
                    "fontSize": 16,
                    "marginBottom": 1,
                    "marginTop": 1,
                  },
                  undefined,
                ]
              }
            >
              Filter by:
            </Text>
            <View>
              <RNCPicker
                items={
                  Array [
                    Object {
                      "label": "All Buildings",
                      "textColor": undefined,
                      "value": null,
                    },
                    Object {
                      "label": "Bentham House",
                      "textColor": undefined,
                      "value": "b",
                    },
                    Object {
                      "label": "Main Building",
                      "textColor": undefined,
                      "value": "main",
                    },
                  ]
                }
                onChange={[Function]}
                selectedIndex={0}
                style={
                  Array [
                    Object {
                      "height": 216,
                    },
                    undefined,
                  ]
                }
                testID="building-picker"
              />
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#4D5061",
                    "fontFamily": "apercu",
                    "fontSize": 16,
                    "marginBottom": 1,
                    "marginTop": 1,
                  },
                  Object {
                    "marginBottom": 10,
                  },
                ]
              }
            >
              Rooms vacant for the next hour:
            </Text>
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    Object {
                      "alignSelf": "stretch",
                      "backgroundColor": "#fff",
                      "borderRadius": 10,
                      "marginBottom": 10,
                      "marginLeft": 2,
                      "marginRight": 2,
                      "marginTop": 5,
                      "padding": 10,
                      "shadowColor": "#000",
                      "shadowOffset": Object {
                        "height": 2,
                        "width": 0,
                      },
                      "shadowOpacity": 0.1845,
                      "shadowRadius": 1.62,
                    },
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "#eaeaea",
                      "borderRadius": 80,
                      "marginRight": 10,
                      "padding": 10,
                    }
                  }
                >
                  <Text
                    allowFontScaling={false}
                    style={
                      Array [
                        Object {
                          "color": undefined,
                          "fontSize": 24,
                        },
                        undefined,
                        Object {
                          "fontFamily": "feather",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#4D5061",
                          "fontFamily": "apercu-bold",
                          "fontSize": 16,
                          "marginBottom": 0,
                          "marginTop": 1,
                        },
                        undefined,
                      ]
                    }
                  >
                    Bentham
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#6E707F",
                          "fontFamily": "apercu",
                          "fontSize": 16,
                          "fontStyle": "italic",
                          "marginBottom": 1,
                          "marginTop": 0,
                        },
                        undefined,
                      ]
                    }
                  >
                    Classroom
                  </Text>
                </View>
              </View>
            </View>
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    Object {
                      "alignSelf": "stretch",
                      "backgroundColor": "#fff",
                      "borderRadius": 10,
                      "marginBottom": 10,
                      "marginLeft": 2,
                      "marginRight": 2,
                      "marginTop": 5,
                      "padding": 10,
                      "shadowColor": "#000",
                      "shadowOffset": Object {
                        "height": 2,
                        "width": 0,
                      },
                      "shadowOpacity": 0.1845,
                      "shadowRadius": 1.62,
                    },
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "#eaeaea",
                      "borderRadius": 80,
                      "marginRight": 10,
                      "padding": 10,
                    }
                  }
                >
                  <Text
                    allowFontScaling={false}
                    style={
                      Array [
                        Object {
                          "color": undefined,
                          "fontSize": 24,
                        },
                        undefined,
                        Object {
                          "fontFamily": "feather",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#4D5061",
                          "fontFamily": "apercu-bold",
                          "fontSize": 16,
                          "marginBottom": 0,
                          "marginTop": 1,
                        },
                        undefined,
                      ]
                    }
                  >
                    Galactica
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#6E707F",
                          "fontFamily": "apercu",
                          "fontSize": 16,
                          "fontStyle": "italic",
                          "marginBottom": 1,
                          "marginTop": 0,
                        },
                        undefined,
                      ]
                    }
                  >
                    Lecture Theatre
                  </Text>
                </View>
              </View>
            </View>
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    Object {
                      "alignSelf": "stretch",
                      "backgroundColor": "#fff",
                      "borderRadius": 10,
                      "marginBottom": 10,
                      "marginLeft": 2,
                      "marginRight": 2,
                      "marginTop": 5,
                      "padding": 10,
                      "shadowColor": "#000",
                      "shadowOffset": Object {
                        "height": 2,
                        "width": 0,
                      },
                      "shadowOpacity": 0.1845,
                      "shadowRadius": 1.62,
                    },
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "#eaeaea",
                      "borderRadius": 80,
                      "marginRight": 10,
                      "padding": 10,
                    }
                  }
                >
                  <Text
                    allowFontScaling={false}
                    style={
                      Array [
                        Object {
                          "color": undefined,
                          "fontSize": 24,
                        },
                        undefined,
                        Object {
                          "fontFamily": "feather",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#4D5061",
                          "fontFamily": "apercu-bold",
                          "fontSize": 16,
                          "marginBottom": 0,
                          "marginTop": 1,
                        },
                        undefined,
                      ]
                    }
                  >
                    Denning
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#6E707F",
                          "fontFamily": "apercu",
                          "fontSize": 16,
                          "fontStyle": "italic",
                          "marginBottom": 1,
                          "marginTop": 0,
                        },
                        undefined,
                      ]
                    }
                  >
                    Classroom
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </RCTSafeAreaView>,
]
`;

exports[`EmptyRoomsScreen renders the loading screen 1`] = `
Array [
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "#fefefe",
        "flex": 0,
      }
    }
  />,
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "#fefefe",
            "flex": 1,
            "flexDirection": "column",
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          Array [
            Object {
              "paddingBottom": 60,
              "paddingLeft": 20,
              "paddingRight": 20,
              "paddingTop": 20,
            },
            undefined,
          ]
        }
        keyboardDismissMode="on-drag"
        refreshControl={null}
        style={
          Array [
            Object {
              "backgroundColor": "#fefefe",
              "flex": 1,
              "paddingLeft": 0,
              "paddingRight": 0,
            },
            undefined,
          ]
        }
      >
        <View>
          <View
            style={
              Object {
                "paddingBottom": 20,
              }
            }
          >
            <ActivityIndicator
              animating={true}
              color="#999999"
              hidesWhenStopped={true}
              size="large"
            />
          </View>
        </View>
      </RCTScrollView>
    </View>
  </RCTSafeAreaView>,
]
`;

exports[`EmptyRoomsScreen shows message when no empty rooms found 1`] = `
Array [
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "#fefefe",
        "flex": 0,
      }
    }
  />,
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "#fefefe",
            "flex": 1,
            "flexDirection": "column",
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          Array [
            Object {
              "paddingBottom": 60,
              "paddingLeft": 20,
              "paddingRight": 20,
              "paddingTop": 20,
            },
            undefined,
          ]
        }
        keyboardDismissMode="on-drag"
        refreshControl={null}
        style={
          Array [
            Object {
              "backgroundColor": "#fefefe",
              "flex": 1,
              "paddingLeft": 0,
              "paddingRight": 0,
            },
            undefined,
          ]
        }
      >
        <View>
          <View
            style={
              Object {
                "paddingBottom": 20,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#4D5061",
                    "fontFamily": "apercu",
                    "fontSize": 16,
                    "marginBottom": 1,
                    "marginTop": 1,
                  },
                  undefined,
                ]
              }
            >
              Filter by:
            </Text>
            <View>
              <RNCPicker
                items={
                  Array [
                    Object {
                      "label": "All Buildings",
                      "textColor": undefined,
                      "value": null,
                    },
                  ]
                }
                onChange={[Function]}
                selectedIndex={0}
                style={
                  Array [
                    Object {
                      "height": 216,
                    },
                    undefined,
                  ]
                }
                testID="building-picker"
              />
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#4D5061",
                    "fontFamily": "apercu",
                    "fontSize": 16,
                    "marginBottom": 1,
                    "marginTop": 1,
                  },
                  Object {
                    "marginBottom": 10,
                  },
                ]
              }
            >
              Rooms vacant for the next hour:
            </Text>
            <View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#6E707F",
                      "fontFamily": "apercu",
                      "fontSize": 16,
                      "marginBottom": 5,
                      "marginTop": 5,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                No empty rooms found 🙁
              </Text>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </RCTSafeAreaView>,
]
`;

exports[`EmptyRoomsScreen supports filtering by building 1`] = `
Array [
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "#fefefe",
        "flex": 0,
      }
    }
  />,
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "#fefefe",
            "flex": 1,
            "flexDirection": "column",
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          Array [
            Object {
              "paddingBottom": 60,
              "paddingLeft": 20,
              "paddingRight": 20,
              "paddingTop": 20,
            },
            undefined,
          ]
        }
        keyboardDismissMode="on-drag"
        refreshControl={null}
        style={
          Array [
            Object {
              "backgroundColor": "#fefefe",
              "flex": 1,
              "paddingLeft": 0,
              "paddingRight": 0,
            },
            undefined,
          ]
        }
      >
        <View>
          <View
            style={
              Object {
                "paddingBottom": 20,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#4D5061",
                    "fontFamily": "apercu",
                    "fontSize": 16,
                    "marginBottom": 1,
                    "marginTop": 1,
                  },
                  undefined,
                ]
              }
            >
              Filter by:
            </Text>
            <View>
              <RNCPicker
                items={
                  Array [
                    Object {
                      "label": "All Buildings",
                      "textColor": undefined,
                      "value": null,
                    },
                    Object {
                      "label": "Bentham House",
                      "textColor": undefined,
                      "value": "b",
                    },
                    Object {
                      "label": "Main Building",
                      "textColor": undefined,
                      "value": "main",
                    },
                  ]
                }
                onChange={[Function]}
                selectedIndex={2}
                style={
                  Array [
                    Object {
                      "height": 216,
                    },
                    undefined,
                  ]
                }
                testID="building-picker"
              />
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#4D5061",
                    "fontFamily": "apercu",
                    "fontSize": 16,
                    "marginBottom": 1,
                    "marginTop": 1,
                  },
                  Object {
                    "marginBottom": 10,
                  },
                ]
              }
            >
              Rooms vacant for the next hour:
            </Text>
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    Object {
                      "alignSelf": "stretch",
                      "backgroundColor": "#fff",
                      "borderRadius": 10,
                      "marginBottom": 10,
                      "marginLeft": 2,
                      "marginRight": 2,
                      "marginTop": 5,
                      "padding": 10,
                      "shadowColor": "#000",
                      "shadowOffset": Object {
                        "height": 2,
                        "width": 0,
                      },
                      "shadowOpacity": 0.1845,
                      "shadowRadius": 1.62,
                    },
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "#eaeaea",
                      "borderRadius": 80,
                      "marginRight": 10,
                      "padding": 10,
                    }
                  }
                >
                  <Text
                    allowFontScaling={false}
                    style={
                      Array [
                        Object {
                          "color": undefined,
                          "fontSize": 24,
                        },
                        undefined,
                        Object {
                          "fontFamily": "feather",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#4D5061",
                          "fontFamily": "apercu-bold",
                          "fontSize": 16,
                          "marginBottom": 0,
                          "marginTop": 1,
                        },
                        undefined,
                      ]
                    }
                  >
                    Galactica
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#6E707F",
                          "fontFamily": "apercu",
                          "fontSize": 16,
                          "fontStyle": "italic",
                          "marginBottom": 1,
                          "marginTop": 0,
                        },
                        undefined,
                      ]
                    }
                  >
                    Lecture Theatre
                  </Text>
                </View>
              </View>
            </View>
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    Object {
                      "alignSelf": "stretch",
                      "backgroundColor": "#fff",
                      "borderRadius": 10,
                      "marginBottom": 10,
                      "marginLeft": 2,
                      "marginRight": 2,
                      "marginTop": 5,
                      "padding": 10,
                      "shadowColor": "#000",
                      "shadowOffset": Object {
                        "height": 2,
                        "width": 0,
                      },
                      "shadowOpacity": 0.1845,
                      "shadowRadius": 1.62,
                    },
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "#eaeaea",
                      "borderRadius": 80,
                      "marginRight": 10,
                      "padding": 10,
                    }
                  }
                >
                  <Text
                    allowFontScaling={false}
                    style={
                      Array [
                        Object {
                          "color": undefined,
                          "fontSize": 24,
                        },
                        undefined,
                        Object {
                          "fontFamily": "feather",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#4D5061",
                          "fontFamily": "apercu-bold",
                          "fontSize": 16,
                          "marginBottom": 0,
                          "marginTop": 1,
                        },
                        undefined,
                      ]
                    }
                  >
                    Denning
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#6E707F",
                          "fontFamily": "apercu",
                          "fontSize": 16,
                          "fontStyle": "italic",
                          "marginBottom": 1,
                          "marginTop": 0,
                        },
                        undefined,
                      ]
                    }
                  >
                    Classroom
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </RCTSafeAreaView>,
]
`;
